# nessai-bilby

./: .pre-commit-config.yaml  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
src/nessai_bilby/: __init__.py  model.py  plugin.py
tests/: conftest.py  test_bilby_integration.py  test_model.py  test_sampler_class.py
