[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nessai-bilby"
authors = [
    {name = "Bilby Developers"},
]
maintainers = [
    {name = "Colm Talbot", email = "colm.talbot@ligo.org"},
    {name = "Michael J. Williams", email = "michael.williams@ligo.org"},
]
description = "Interface and plugin for using nessai in bilby"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "bilby>=2.3.0",
    "nessai",
    "numpy",
    "pandas",
    "scipy",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools_scm]

[project.entry-points."bilby.samplers"]
nessai = "nessai_bilby.plugin:Nessai"
inessai = "nessai_bilby.plugin:ImportanceNessai"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
extend-select = ["I"]
